Closed Bug 1736163 Opened 3 years ago Closed 3 years ago

Perma DevEdition image/test/mochitest/test_mq_dynamic_svg.html | In light mode snapshot comparison should be false when Gecko 95 merges to Beta on 2021-11-01

Categories

(Core :: Graphics: ImageLib, defect)

defect

Tracking

()

VERIFIED FIXED
95 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox93 --- unaffected
firefox94 --- wontfix
firefox95 + verified

People

(Reporter: NarcisB, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[Tracking Requested - why for this release]:

Central-as-beta simulation:
https://treeherder.mozilla.org/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel&revision=d907de61d60d467858ded0eb0a6ad5731cbe2e21&selectedTaskRun=LjNjnPmVQwSKpC-90VwGSA.0

Failure log:
https://treeherder.mozilla.org/logviewer?job_id=355008926&repo=try&lineNumber=6078

Log snippet:

[task 2021-10-16T12:30:04.660Z] 12:30:04     INFO - TEST-START | image/test/mochitest/test_mq_dynamic_svg.html
[task 2021-10-16T12:30:04.737Z] 12:30:04     INFO - TEST-INFO | started process screencapture
[task 2021-10-16T12:30:04.824Z] 12:30:04     INFO - TEST-INFO | screencapture: exit 0
[task 2021-10-16T12:30:04.824Z] 12:30:04     INFO - TEST-UNEXPECTED-FAIL | image/test/mochitest/test_mq_dynamic_svg.html | In light mode snapshot comparison should be false 
[task 2021-10-16T12:30:04.824Z] 12:30:04     INFO -     SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
[task 2021-10-16T12:30:04.824Z] 12:30:04     INFO -     run@image/test/mochitest/test_mq_dynamic_svg.html:31:5
[task 2021-10-16T12:30:04.825Z] 12:30:04     INFO - TEST-PASS | image/test/mochitest/test_mq_dynamic_svg.html | In dark mode snapshot comparison should be true
Flags: needinfo?(emilio)
Regressed by: 1529323
Summary: Perma image/test/mochitest/test_mq_dynamic_svg.html | In light mode snapshot comparison should be false when Gecko 95 merges to Beta on 2021-11-01 → Perma DevEdition image/test/mochitest/test_mq_dynamic_svg.html | In light mode snapshot comparison should be false when Gecko 95 merges to Beta on 2021-11-01
Has Regression Range: --- → yes
Flags: needinfo?(emilio)
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8ab720900faf Use the right pref to enforce prefers-color-scheme values in a mochitest.
Pushed by emilio@crisal.io: https://hg.mozilla.org/integration/autoland/rev/5e4047061e46 layout.css.prefers-color-scheme.content-override should trigger a look and feel update.
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch

Testing this seems to work on normal documents that support both preferred color schemes (I typically use https://duckduckgo..com as a test) but fails on firefox page like about:blank

(In reply to Cimbali from comment #5)

Testing this seems to work on normal documents that support both preferred color schemes (I typically use https://duckduckgo..com as a test) but fails on firefox page like about:blank

That’s not true at all by the way, it works fine on any content page − after recompiling from scratch again. I was looking into doing this from within nsPresContext::PreferenceChanged (but there may be reasons I’m unaware of for which it’s not a good idea?) so I might have messed something up when testing.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: