Bug 1736163 - layout.css.prefers-color-scheme.content-override should trigger a look and feel update.

MANUAL PUSH: Trivial orange fix CLOSED TREE